--- a/app/build.gradle
+++ b/app/build.gradle
@@ -138,6 +138,9 @@ dependencies {
     testImplementation 'androidx.test:core:1.5.0'
     testImplementation 'androidx.test.ext:junit:1.1.5'
     debugImplementation 'junit:junit:4.13.2'
+
+    androidTestImplementation 'org.hamcrest:hamcrest:2.2'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
 }
 
 def adb = android.getAdbExecutable().toString()
